# ChangeLog for dev-util/molecule-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/molecule-plugins/ChangeLog,v 1.2 2014/02/19 10:54:13 lxnay Exp $

  19 Feb 2014; Fabio Erculiani <lxnay@gentoo.org>
  molecule-plugins-1.0.1.ebuild:
  fix molecule dependency

*molecule-plugins-1.0.1 (21 Mar 2013)

  21 Mar 2013; Fabio Erculiani <lxnay@gentoo.org>
  +molecule-plugins-1.0.1.ebuild, +metadata.xml:
  new ebuild, upstream split from molecule
