@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST molecule-plugins-1.0.1.tar.bz2 35623224 SHA256 a39e8639aa25e8c086a4de1a3dbd1d4f9abe86ab8684916aca4d88c2941ebe91 SHA512 2a54b43aa496ba39e555564428d7ee6d542e95240a5be60204de871e4f3e4a39354cd0c8e9b9e31f54bba1a14046041ef432e4d2793961cefc815b52df5bc9c2 WHIRLPOOL 65049e5a0fe5177b253c5006f6843c2a98d732f4a2b588d844d0c846f54fbdd3c9a97be0f362ff820e17821dc9acf08faf83c160084a99c6fe23f510ce0a941e
+DIST molecule-plugins-1.0.2.tar.bz2 17428 SHA256 1e2c8de1e4c8dd3b8623bb048527153bef147e15d01d13e61575711561703b4d SHA512 65b75c23f3c662812be2ab4fe0c92bd99aba48da6e05aad6175ba3fe1cd8106d9085ed53f27c738ef6af1b327ac8ac872ef7c3c48728366b510b7a82bb90c866 WHIRLPOOL 90f1f22c0e3514ac3ba658b9de32ca71eafa60ba7e5a6e212d0b1fbcbcd4cd22a6be405c9dad06179e1db9d09e161fb50cf57d3307b8a8a950fe6366e5e788b1
 EBUILD molecule-plugins-1.0.1.ebuild 926 SHA256 f9d3cc3ef00c7e5dbc07cebf8c90f166037ad4c394f9f8fbf011febb456447a7 SHA512 9bd92cf84f7bbc1ea3df044224090680ec405acc7c72452674b52477c6e14d69a819c6f2d0f5200abf3aeea5f03bdc71f18c276b260245c67f1a3bdb0b040833 WHIRLPOOL aa2ca1ba1e5cb7298165edae9022d029a7fb94e868047a40a7730754f87d487ef11d3e4222160e6ed2439cdf9326942ebeced831d37ead573743e74edee10fb5
-MISC ChangeLog 514 SHA256 cfae9331ee1eef954fd398c12002996c32caba317726c59039771a8bb471ea63 SHA512 281e682069fe4564c3388b60c27251a3705aa98f9689f976f41925b7c5b6a342043b45f1d8edcbbef6dde0eb7eda2d9fcd16e922703b282f4f9aa079fbb39381 WHIRLPOOL 1e744f4c5718e9e7f30b9e97466b68a3a6c843a0286a9c7221b029168ac802e161b08c05ec549b6d24646d77d7ea6f068b5b9a37574ea45136b5e7cc7f41ab40
+EBUILD molecule-plugins-1.0.2.ebuild 927 SHA256 8346c4a5a67778660a6416f3e085884dd98a56a10d96bd27278d92f94093127d SHA512 f51db7b251d306722c4154392dd03481e8baa96580853274ae53bbc22c5019a5f54d58c35b7c743bf8526ba50fd152fa5573e01a9cdccddb22eab6fb684fb1ab WHIRLPOOL 924fcbd41071adaa8cc74e0a5a7dedb6b2d31d76f9fd44143e2b95507cff9225278321b2b4b22b86de039814264d14a2dce14f08e49f24e12175f59ff094e5fa
+MISC ChangeLog 653 SHA256 231f36744197990c853ba7c686b0d12357cc32a8c0f19bb5e52ac9c9bdc61517 SHA512 1b7eaef255ec642a472ec2ee9948e78be4f99b1274da2101da0dcad71601673bd7c3a62cf0c3bcac2de29a033cf09b9753994c02bd89ff3c76f5b56e22eba1b7 WHIRLPOOL 5f07c6ee97af81fff173cd89f9143254fcf1b9d50e46f86a563601dd9601cd05c21ce8111d263af4317a4f95133d9b39d4c718ba13e3084b405ca669f464665c
 MISC metadata.xml 233 SHA256 381683a6be11e793f3dfcbf26da5316fc79c30689dc160a584ef23db1794b71a SHA512 bb6610711a0ccaf1f41aa765dbbc756d74cd810900e4de93ada7edabc0fa94b3df7798b3902d1d55b19ecc3589079c08056c7a811d935ddab74b27ca85a3a9cf WHIRLPOOL 4bdf918369ce53304b638f7d2b4142dc3dc844342e8625266c4d00058d9b76e87f7ea1f774caddebdc0d98f131d12491182d46421233843f28f81586a564b630
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMEjVYACgkQfaj9zK3JFuXRiwCffYUn8oUQw7R60Hb1Sal4j0oZ
-FwAAoMb+o1Tc8WT/9ewMakK+ApBEH7UV
-=B2QC
+iEYEAREIAAYFAlMEkE8ACgkQfaj9zK3JFuXvPwCeNmOw5upOWEWYQjVhxqTHrfM4
+hzQAn2NNkBrsbaOH01Ppe8l2yTjbWf7B
+=heWV
 -----END PGP SIGNATURE-----
