@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/molecule-plugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/molecule-plugins/ChangeLog,v 1.2 2014/02/19 10:54:13 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/molecule-plugins/ChangeLog,v 1.3 2014/02/19 11:06:54 lxnay Exp $
+
+*molecule-plugins-1.0.2 (19 Feb 2014)
+
+  19 Feb 2014; Fabio Erculiani <lxnay@gentoo.org>
+  +molecule-plugins-1.0.2.ebuild:
+  version bump
 
   19 Feb 2014; Fabio Erculiani <lxnay@gentoo.org>
   molecule-plugins-1.0.1.ebuild:
